new resume link and new photo

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
         <div class="row">
           <div class="col-lg-4">
-            <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
+            <img src="/assets/img/pet-img.jpeg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3>Hello!</h3>
@@ -109,7 +109,7 @@
             <h4>
               When I'm not working on projects or coding, I love to scrapbook and play badminton!
               I am also a linguaphile but most of the times you'll probably find me gushing over how 
-              cute my rabbit, Tofu, is! </h4>
+              cute my rabbit, Tofu, and my puppy, 旺仔, are \^-^/ </h4>
           </div>
         </div>
 
@@ -216,7 +216,7 @@
                   <i class="bi bi-emoji-smile"></i>
                   <span data-purecounter-start="0" data-purecounter-end="5" data-purecounter-duration="1" class="purecounter"></span>
                   <p>Coding Languages</p>
-                  <h5>Python (proficient); C/HTML/CSS/JavaScript (prior experience)</h5>
+                  <h5>Python (proficient); Java, C++, C, HTML, CSS, JavaScript, SQL </h5>
                 </div>
               </div>
     
@@ -258,7 +258,7 @@
 
         <div class="section-title">
           <h2>Resume</h2> 
-          <p>For a copy of my full resume, visit <a target="_blank" href="https://drive.google.com/file/d/1u7ff51wYAS5I950pT8GGETcWewfE5_Rq/view?usp=sharing">here</a>.</p>
+          <p>For a copy of my full resume, visit <a target="_blank" href="https://drive.google.com/file/d/18DqxI8-mOaDiIpTrRi3Vt8XlzRF8v4FB/view?usp=sharing">here</a>.</p>
         </div>
         
         <div class="row">
@@ -275,7 +275,7 @@
             </div>
             <div class="resume-item">
               <h4>CS32 : Computational Thinking and Problem Solving</h4>
-              <h6>Springs Semester 2023</h6>
+              <h6>Spring Semester 2023</h6>
               <p><em>Teaching Fellow </em></p>
               <ul>
                 <li>Hold 2 hours of weekly student-facing office hours and sections to reinforce students' understanding of in-class materials</li>
@@ -321,12 +321,12 @@
             <div class="resume-item">
               <h4>Smart Women Securities</h4>
               <h6>August 2022 - Present</h6>
-              <p><em>Chief Technology Officer (September 2022 - Present)</em></p>
+              <p><em>Chief Technology Officer (September - December 2022)</em></p>
               <ul>
                 <li>Manage organization's website by frequently updating website with new events and alumni updates. </li>
                 <li>Redesigned website's functionality to boost general membership involvement.</li>
               </ul>
-              <p><em>Investment Board Analyst (Aug 2022 - Present)</em></p>
+              <p><em>Investment Board Analyst (Aug 2022 - December 2022)</em></p>
               <ul>
                 <li>Coordinate selling and buying of a $45K investment portfolio across tech, 
                   healthcare, industrials, ESG, etc. through equity research and financial modeling.</li>
