--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <div><img src="assets/img/profile-img.jpg" style="max-width:300px; border-radius:10px;"></div>
           <br>
           <p class="mb-5" style="font-family: 'Poppins', sans-serif; font-size:26px; color: #45505b;">Hello World, I'm</p>
-          <h1 style="color: #ABC4FF; font-size: 70px; line-height: 55px; font-weight: 700;"><span class="typed" data-typed-items="Sammi Zhu"></span></h1>
+          <h1 style="color: #ABC4FF; font-size: 70px; line-height: 55px; font-weight: 700;"><span class="typed" data-typed-items="Nathan Zhu"></span></h1>
         </div>
         <br>
         <div class="social-links">
