--- a/Sleeps50-details.html
+++ b/Sleeps50-details.html
@@ -73,6 +73,9 @@
                 can also view their sleep habit analytics, which is beneficial for users who need to track 
                 their sleeping health for medical purposes. The web app also hosts resources that users can
                 use to improve their sleep health if needed. 
+                <br>
+                <br>
+                Note: This is an app developed by Jolin Chan and myself.
               </p>
             </div>
           </div>
