--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <div class="container pt-5">
       <div class="row" style="display:flex;flex-direction:column;margin:auto;justify-content:center;height:90vh;">
         <div class="col-lg-7 mx-auto text-center">
-          <div><img src="assets/img/profile-img.jpg" style="max-width:300px; border-radius:10px;"></div>
+          <div><img src="assets/img/profile-img.jpg" class = "center" style="max-width:300px; border-radius:10px;"></div>
           <br>
           <p class="mb-5" style="font-family: 'Poppins', sans-serif; font-size:26px; color: #45505b;">Hello World, I'm</p>
           <h1 style="color: #ABC4FF; font-size: 70px; line-height: 55px; font-weight: 700;"><span class="typed" data-typed-items="Sammi Zhu"></span></h1>
@@ -196,6 +196,20 @@
             </div>
           </div>
 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-project">
+            <div class="portfolio-wrap">
+              <image src="/assets/img/portfolio/Unity.gif" alt="" width="100%">
+              <div class="portfolio-info">
+                <h4>Unity Game</h4>
+                <p>Game</p>
+                <div class="portfolio-links">
+                  <a href="/assets/img/portfolio/Unity.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Unity Adventure Game"><i class="bx bx-plus"></i></a>
+                  <a href="/Unity.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
         </div>
 
       </div>
@@ -214,18 +228,18 @@
               <div class="col-lg-3 col-md-6">
                 <div class="count-box">
                   <i class="bi bi-emoji-smile"></i>
-                  <span data-purecounter-start="0" data-purecounter-end="5" data-purecounter-duration="1" class="purecounter"></span>
+                  <span data-purecounter-start="0" data-purecounter-end="9" data-purecounter-duration="1" class="purecounter"></span>
                   <p>Coding Languages</p>
-                  <h5>Python (proficient); Java, C++, C, HTML, CSS, JavaScript, SQL </h5>
+                  <h5>Python (proficient), Java, C++, C, HTML, CSS, JavaScript, PostgreSQL, AngularJS </h5>
                 </div>
               </div>
     
               <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
                 <div class="count-box">
                   <i class="bi bi-journal-richtext"></i>
-                  <span data-purecounter-start="0" data-purecounter-end="4" data-purecounter-duration="1" class="purecounter"></span>
+                  <span data-purecounter-start="0" data-purecounter-end="8" data-purecounter-duration="1" class="purecounter"></span>
                   <p>Programs</p>
-                  <h5>Visual Studio; Chrome Extension Developer; GitHub and Figma</h5>
+                  <h5>Visual Studio, IntelliJ, Azure, Chrome Extension Developer, GitHub, Unity, and Figma</h5>
                 </div>
               </div>
     
@@ -267,10 +281,12 @@
             <div class="resume-item">
               <h4>General Motors</h4>
               <h6>May - August 2023</h6>
-              <p><em>Incoming SWE Intern </em></p>
+              <p><em>SWE Intern </em></p>
               <ul>
-                <!-- <li>Lead weekly tutorial sessions to help students better understand intro CS concepts for a class with 700+ students.</li>
-                <li>Host weekly office hours for drop in students to answer questions about problem sets and other conceptual questions.</li> -->
+                <li>Worked on VIN, ECU, and Part Clustering webapp management system with Over the Air in progress</li>
+                <li>Optimized querying algorithm of over 500,000 VINS and 45 million vehicle parts for manufactory engineers</li>
+                <li>Utilized IntelliJ, PostgreSQL, AngularJS, and Azure and mainly programmed in Java, Javascript, HTML, CSS, Sqlite, and Python Flask</li>
+                <li>Researched database performance improvement methods and designed 4 new features to support app performance rate</li>
               </ul>
             </div>
             <div class="resume-item">
