--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3>Hello!</h3>
             <h4>
-              I'm a sophomore at Harvard studying CS with a secondary in statistics and I'm
+              I'm a junior at Harvard studying CS with a secondary in statistics/linguistics (still deciding tbh haha) and I'm
               passionate about making CS accessible for every student! As a First Generation
               Low Income student and CS enthusiast, I have seen the barriers FGLI students
               face when it comes to learning CS, as well as the fun and joy that comes from learning 
@@ -109,7 +109,7 @@
             <h4>
               When I'm not working on projects or coding, I love to scrapbook and play badminton!
               I am also a linguaphile but most of the times you'll probably find me gushing over how 
-              cute my rabbit, Tofu, and my puppy, 旺仔, are \^-^/ </h4>
+              cute my rabbit, Tofu, and my puppy, 旺仔 (pronounced wangzai), are \^-^/ </h4>
           </div>
         </div>
 
