updated resume section and embedded video for unity project

--- a/index.html
+++ b/index.html
@@ -283,28 +283,36 @@
               <h6>May - August 2023</h6>
               <p><em>SWE Intern </em></p>
               <ul>
-                <li>Worked on VIN, ECU, and Part Clustering webapp management system with Over the Air in progress</li>
-                <li>Optimized querying algorithm of over 500,000 VINS and 45 million vehicle parts for manufactory engineers</li>
-                <li>Utilized IntelliJ, PostgreSQL, AngularJS, and Azure and mainly programmed in Java, Javascript, HTML, CSS, Sqlite, and Python Flask</li>
-                <li>Researched database performance improvement methods and designed 4 new features to support app performance rate</li>
+                <li>Worked on VIN, ECU, and Part Clustering webapp management system with Over the Air in progress.</li>
+                <li>Optimized querying algorithm of over 500,000 VINS and 45 million vehicle parts for manufactory engineers.</li>
+                <li>Utilized IntelliJ, PostgreSQL, AngularJS, and Azure and mainly programmed in Java, Javascript, HTML, CSS, Sqlite, and Python Flask.</li>
+                <li>Researched database performance improvement methods and designed 4 new features to support app performance rate.</li>
               </ul>
             </div>
             <div class="resume-item">
-              <h4>CS32 : Computational Thinking and Problem Solving</h4>
-              <h6>Spring Semester 2023</h6>
-              <p><em>Teaching Fellow </em></p>
+              <h4>Teaching Fellow</h4>
+              <h6>August 2022 - Present</h6>
+              <p><em>CS32 : Computational Thinking and Problem Solving (Spring Semesters)</em></p>
               <ul>
-                <li>Hold 2 hours of weekly student-facing office hours and sections to reinforce students' understanding of in-class materials</li>
-                <li>Help foster a welcoming environment for over 110 students and encourage students to pursue computer science </li>
+                <li>Hold 2 hours of weekly student-facing office hours and sections to reinforce students' understanding of in-class materials.</li>
+                <li>Help foster a welcoming environment for over 110 students and encourage students to pursue computer science. </li>
               </ul>
-            </div>
-            <div class="resume-item">
-              <h4>CS50 : Intro to CS</h4>
-              <h6>Fall Semester 2022</h6>
-              <p><em>Course Assistant </em></p>
+              <p><em>CS50 : Intro to CS (Fall Semesters)</em></p>
               <ul>
                 <li>Led weekly tutorial sessions to help students better understand intro CS concepts for a class with 700+ students.</li>
                 <li>Hosted weekly office hours for drop in students to answer questions about problem sets and other conceptual questions.</li>
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>Ivy Education LLC</h4>
+              <h6>October 2021 - Present</h6>
+              <p><em>Higher Education Consultant</em></p>
+              <ul>
+                <li>Private tutoring for high school students on a variety of subjects such as AP Calculus AB, AP Chemistry, 
+                  college preparation, application essay reviews, and how to start a passion project.</li>
+                <li>Help students to become more confident in their personal education experience.</li>
+                <li>Host seminars on the topic of American College Application system.</li>
+                <li>Design class curriculum that aligns with individual student's needs to better enhance their tutoring experience.</li>
               </ul>
             </div>
             <div class="resume-item">
@@ -323,7 +331,15 @@
             <div class="resume-item">
               <h4>Women in Computer Science</h4>
               <h6>December 2021 - Present</h6>
-              <p><em>FGLI (First Generation Low Income) Director (June 2022 - Present)</em></p>
+              <p><em>Finance Co-Director (May 2023 - Present)</em></p>
+              <ul>
+                <li>Oversees all financial aspects of WiCS, including creating WiCS’ budget, ensuring payments are made, and reimbursements in a timely manner.</li>
+                <li>Drawing annual budget in collaboration with other directors.</li>
+                <li>Writing invoices, write W9, order checks.</li>
+                <li>Handling sponsor payment logistics, all WiCS reimbursements (such as WECode, other events planned by board) in a timely fashion, 
+                  and financial side of nonprofit status (including taxes).</li>
+              </ul>
+              <p><em>FGLI (First Generation Low Income) Co-Director (June 2022 - May 2023)</em></p>
               <ul>
                 <li>Increase peer academic support for students with little STEM and/or CS 
                   background through collaboration with other Harvard student advocacy groups.</li>
@@ -351,7 +367,14 @@
             <div class="resume-item">
               <h4>Harvard College in Asia Program</h4>
               <h6>August 2022 - Present</h6>
-              <p><em>Operations Team Member</em></p>
+              <p><em>Alumni Chair (May 2023 - Present)</em></p>
+              <ul>
+                <li>Build a foundation for a strongly engaged alumni - student relationship for future generations of the organization.</li>
+                <li>Establish an alumni board of alumnus and organize meetings to hear feedback and improvements they may have for the club.</li>
+                <li>Publish newsletters to keep alumni updated on current organization affairs.</li>
+                <li>Initiate mentorship program for current students to be matched with an alumni from similar background, career interest, or general location.</li>
+              </ul>
+              <p><em>Operations Team Member (August 2022 - March 2023)</em></p>
               <ul>
                 <li>Plan meal logistic for Harvard's premier organization for US-Asia academic, cultural, and social exchange via outreaching
                   to establish sponsorships with local businesses.
