--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta content="" name="keywords"> -->
   <!-- Primary Meta Tags -->
   <meta name="title" content="Sammi Zhu">
-  <meta name="description" content="I'm a Harvard sophomore passionate about accessible CS with experiences in research, medical enginnering, and fintech .">
+  <meta name="description" content="I'm a Harvard junior passionate about accessible CS with experiences in research, medical enginnering, and fintech .">
 
 
   <!-- Favicons -->
