--- a/index.html
+++ b/index.html
@@ -272,12 +272,17 @@
 
         <div class="section-title">
           <h2>Resume</h2> 
-          <p>For a copy of my full resume, visit <a target="_blank" href="https://drive.google.com/file/d/1rVJvw8wb5CkFmUkarx26b_yxevJzLoC0/view?usp=sharing">here</a>.</p>
+          <p>For a copy of my full resume, visit <a target="_blank" href="https://drive.google.com/file/d/1bj0gISQCNevlsFb3Yd-QJ2JcAZmzYGxX/view?usp=sharing">here</a>.</p>
         </div>
         
         <div class="row">
           <div class="col-lg-6">
             <h3 class="resume-title">Work Experience</h3>
+            <div class="resume-item">
+              <h4>Capital One</h4>
+              <h6>June - August 2024</h6>
+              <p><em>Incoming SWE Intern </em></p>
+            </div>
             <div class="resume-item">
               <h4>General Motors</h4>
               <h6>May - August 2023</h6>
@@ -292,6 +297,11 @@
             <div class="resume-item">
               <h4>Teaching Fellow</h4>
               <h6>August 2022 - Present</h6>
+              <p><em>CS175 : Computer Graphics (Spring Semesters)</em></p>
+              <ul>
+                <li>Host weekly office hours to help reiterate students' conceptual understanding of topics discussed in lecture.</li>
+                <li>Grade, design, and mentor students on final project development.</li>
+              </ul>
               <p><em>CS32 : Computational Thinking and Problem Solving (Spring Semesters)</em></p>
               <ul>
                 <li>Hold 2 hours of weekly student-facing office hours and sections to reinforce students' understanding of in-class materials.</li>
@@ -301,6 +311,17 @@
               <ul>
                 <li>Led weekly tutorial sessions to help students better understand intro CS concepts for a class with 700+ students.</li>
                 <li>Hosted weekly office hours for drop in students to answer questions about problem sets and other conceptual questions.</li>
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>Harvard Business School</h4>
+              <h6>Dec 2023 - Present</h6>
+              <p><em>Research Assistant</em></p>
+              <ul>
+                <li>Investigate social injustice in private equity, emphasizing minority underrepresentation in entrepreneurship funding.</li>
+                <li>Develope and apply programming techniques, including automated image and name classification, to analyze fundraising and perform 
+                  disparities between minority and non-minority funds.</li>
+                <li>Innovate machine learning algorithms to reduce biases and improve correlation findings on race classifications.</li>
               </ul>
             </div>
             <div class="resume-item">
@@ -351,17 +372,12 @@
               </ul>
             </div>
             <div class="resume-item">
-              <h4>Smart Women Securities</h4>
-              <h6>August 2022 - Present</h6>
-              <p><em>Chief Technology Officer (September - December 2022)</em></p>
+              <h4>Winthrop House Committe</h4>
+              <h6>December 2023 - Present</h6>
+              <p><em>Treasurer</em></p>
               <ul>
-                <li>Manage organization's website by frequently updating website with new events and alumni updates. </li>
-                <li>Redesigned website's functionality to boost general membership involvement.</li>
-              </ul>
-              <p><em>Investment Board Analyst (Aug 2022 - December 2022)</em></p>
-              <ul>
-                <li>Coordinate selling and buying of a $45K investment portfolio across tech, 
-                  healthcare, industrials, ESG, etc. through equity research and financial modeling.</li>
+                <li>Financial Management: Spearheading budget planning, monitoring, and allocation to optimize resources for memorable House events.</li>
+                <li>Collaborative Leadership: Partnering with other committees and local sponsors to drive successful fundraising initiatives and secure vital financial support.</li>
               </ul>
             </div>
             <div class="resume-item">
@@ -379,6 +395,20 @@
                 <li>Plan meal logistic for Harvard's premier organization for US-Asia academic, cultural, and social exchange via outreaching
                   to establish sponsorships with local businesses.
                 </li>
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>Smart Women Securities</h4>
+              <h6>August 2022 - Present</h6>
+              <p><em>Chief Technology Officer (September - December 2022)</em></p>
+              <ul>
+                <li>Manage organization's website by frequently updating website with new events and alumni updates. </li>
+                <li>Redesigned website's functionality to boost general membership involvement.</li>
+              </ul>
+              <p><em>Investment Board Analyst (Aug 2022 - December 2022)</em></p>
+              <ul>
+                <li>Coordinate selling and buying of a $45K investment portfolio across tech, 
+                  healthcare, industrials, ESG, etc. through equity research and financial modeling.</li>
               </ul>
             </div>
           </div>
