--- a/index.html
+++ b/index.html
@@ -228,9 +228,9 @@
               <div class="col-lg-3 col-md-6">
                 <div class="count-box">
                   <i class="bi bi-emoji-smile"></i>
-                  <span data-purecounter-start="0" data-purecounter-end="9" data-purecounter-duration="1" class="purecounter"></span>
+                  <span data-purecounter-start="0" data-purecounter-end="11" data-purecounter-duration="1" class="purecounter"></span>
                   <p>Coding Languages</p>
-                  <h5>Python (proficient), Java, C++, C, HTML, CSS, JavaScript, PostgreSQL, AngularJS </h5>
+                  <h5>Python (proficient), Java, C++, C, HTML, CSS, JavaScript, PostgreSQL, AngularJS, Stata, R </h5>
                 </div>
               </div>
     
